--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <base href=/koyun/ >
+    <base href=/cem/ >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koyun Takip</title>
+    <title>FireUp</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
   </head>
   <body>
